# RFRayTracingKit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bindings/c/: README.md  rftrace_c.cpp
bindings/python/: README.md  pybind11_module.cpp  pyproject.toml
bindings/python/rftracekit/: __init__.py  _util.py  antennas.py  materials.py  mimo.py  results.py  route.py  scene.py  simulator.py
bindings/python/rftracekit/io/: __init__.py
bindings/python/rftracekit/viz/: __init__.py  plotly.py  pyvista.py
bindings/python/tests/: conftest.py  test_antenna_array.py  test_bindings.py  test_coverage.py  test_coverage_cell_heights.py  test_exporters.py  test_geo_io.py  test_import.py  test_new_features.py  test_numpy.py  test_pandas.py  test_parity.py  test_route_mimo.py  test_simulation.py  test_viz.py
bindings/swift/: Package.swift  README.md
cli/: CMakeLists.txt  README.md  cli_common.hpp  result_converter.cpp  rftrace_cli.cpp  scene_validator.cpp
cli/tests/: test_cli.cpp
cmake/: RFTraceKitConfig.cmake.in
examples/: CMakeLists.txt
examples/advanced_rf/: main.cpp
examples/backends_and_features/: README.md  backends_and_features.py
examples/barbados_5g/: README.md  antenna_clearance.py  barbados_5g.py  barbados_6sector.py  dem.py  fetch_osm.py
examples/city_reflection/: main.cpp
examples/coverage_grid/: main.cpp
examples/cuda_benchmark/: main.cpp
examples/sim_benchmark/: main.cpp
examples/simple_los/: main.cpp
examples/wifi_indoor/: README.md  wifi_indoor.py
include/rftrace/: antenna.hpp  backend.hpp  bvh.hpp  cell_planning.hpp  coverage.hpp  geometry.hpp  material.hpp  math.hpp  result.hpp  rftrace.h  rftrace.hpp  route.hpp  scene.hpp  simulator.hpp
include/rftrace/backends/: cuda_backend.hpp  embree_backend.hpp  metal_backend.hpp  opencl_backend.hpp
include/rftrace/detail/: batch_query.hpp  parallel_for.hpp  propagation.hpp  receiver_grid.hpp
include/rftrace/exporters/: csv_exporter.hpp  czml_exporter.hpp  geojson_exporter.hpp  geotiff_heatmap.hpp  gltf_exporter.hpp  json_exporter.hpp  parquet_exporter.hpp  tiles3d_exporter.hpp
include/rftrace/geo/: footprint.hpp
include/rftrace/importers/: cityjson_importer.hpp  geojson_importer.hpp  geotiff_terrain.hpp  material_importer.hpp  mesh_importer.hpp  msi_importer.hpp  osm_importer.hpp  osm_pbf_importer.hpp
include/rftrace/rf/: antenna_pattern.hpp  array.hpp  atmospheric.hpp  channel.hpp  diffraction.hpp  diffraction_multi.hpp  doppler.hpp  free_space_path_loss.hpp  fresnel.hpp  mimo.hpp  penetration.hpp  phase.hpp  polarization.hpp  reflection.hpp  utd.hpp  utd_geometry.hpp  vegetation.hpp
openspec/: project.md
openspec/changes/batched-simulator-path/: design.md  tasks.md
openspec/changes/c-api-and-swift-bindings/: tasks.md
openspec/changes/cli-tools/: design.md  tasks.md
openspec/changes/cpu-full-run-acceleration/: design.md  tasks.md
openspec/changes/embree-backend/: design.md  tasks.md
openspec/changes/phase1-cpu-prototype/: README.md  design.md  proposal.md  tasks.md
openspec/changes/phase2-rf-multipath/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/phase3-python-bindings/: .openspec.yaml  README.md  design.md
openspec/changes/phase4-metal-backend/: README.md  design.md  proposal.md  tasks.md
openspec/changes/phase5-cuda-backend/: README.md  design.md  proposal.md
openspec/changes/phase6-opencl-backend/: tasks.md
openspec/changes/phase7-advanced-rf/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/rf-physics-advanced/: .openspec.yaml  README.md  design.md  proposal.md
openspec/changes/rf-physics-wiring/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/utd-wedge-path-model/: design.md  tasks.md
openspec/specs/accelerated-simulation/: spec.md
openspec/specs/antenna-arrays/: spec.md
openspec/specs/antenna-msi-import/: spec.md
openspec/specs/atmospheric-attenuation/: spec.md
openspec/specs/batched-simulation/: spec.md
openspec/specs/c-api/: spec.md
openspec/specs/cell-planning/: spec.md
openspec/specs/cityjson-import/: spec.md
openspec/specs/cli-tools/: spec.md
openspec/specs/consumability/: spec.md
openspec/specs/core-geometry/: spec.md
openspec/specs/coverage-grid/: spec.md
openspec/specs/coverage-multipath/: spec.md
openspec/specs/cuda-backend/: spec.md
openspec/specs/czml-export/: spec.md
openspec/specs/dev-tooling/: spec.md
openspec/specs/diffraction/: spec.md
src/: antenna.cpp  scene.cpp  simulator.cpp
src/core/: bvh.cpp  footprint.cpp  geometry.cpp
src/exporters/: csv_exporter.cpp  czml_exporter.cpp  geojson_exporter.cpp  geotiff_heatmap.cpp  gltf_exporter.cpp  json_exporter.cpp  parquet_exporter.cpp  tiles3d_exporter.cpp
src/importers/: cityjson_importer.cpp  geo_import_util.cpp  geo_import_util.hpp  geojson_importer.cpp  geotiff_terrain.cpp  material_importer.cpp  mesh_importer.cpp  msi_importer.cpp  osm_extract.cpp  osm_extract.hpp  osm_importer.cpp  osm_pbf_importer.cpp
tests/: CMakeLists.txt  c_api_test.c  test_arrays.cpp  test_attenuation.cpp  test_backend_api.cpp  test_batched_sim.cpp  test_bvh.cpp  test_coverage.cpp  test_coverage_multipath.cpp  test_cuda_parity.cpp  test_czml.cpp  test_diffraction.cpp  test_doppler.cpp  test_embree_parity.cpp  test_geo_import.cpp  test_geojson.cpp  test_geometry.cpp  test_georef.cpp  test_geotiff.cpp  test_gltf.cpp  test_golden.cpp  test_import.cpp  test_metal.cpp  test_metal_parity.cpp  test_mimo.cpp  test_msi_antenna.cpp  test_multiedge_diffraction.cpp  test_opencl_parity.cpp  test_osm_pbf.cpp  test_osm_xml.cpp  test_parquet.cpp  test_phase2_golden.cpp  test_phase2_raylaunch_batch.cpp  test_phase2_sim.cpp  test_phase2_threading.cpp  test_phase3_backend_reuse.cpp  test_phase7_integration.cpp  test_phase7_regression.cpp  test_polarization.cpp  test_raylaunch.cpp  (+12 more)
(+154 files in other folders)
